# PlanForge

./: .gitignore  README.md  SETUP.md  backend.py  example_usage.py  pyproject.toml  report.md  result.json  run_backend.py  test.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: GanttChart.tsx  MilestonesPopup.tsx  Timeline3D.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/types/: frappe-gantt.d.ts
html_designs/: project_entry_form.html  project_plan_dashboard.html
src/project_planner/: __init__.py  crew.py  main.py  models.py
src/project_planner/config/: agents.yaml  tasks.yaml
src/project_planner/tools/: custom_tool.py
src/project_progres/: __init__.py  crew.py  main.py
src/project_progres/config/: agents.yaml  tasks.yaml
src/project_progres/tools/: __init__.py  custom_tool.py
