[project]
name = "project_planner"
version = "0.1.0"
description = "project_planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "fastapi",
    "uvicorn[standard]",
    "pydantic"
]

[project.scripts]
project_planner = "project_planner.main:run"
run_crew = "project_planner.main:run"
train = "project_planner.main:train"
replay = "project_planner.main:replay"
test = "project_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
